<resources>
    <string name="app_name">InsightFuture</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="login">Login</string>
    <string name="register">Registrati</string>
    <string name="bornPlace">Luogo di nascita</string>
    <string name="loading">Caricamento...</string>
    <string name="question">Domanda</string>
    <string name="search">Cerca</string>
    <string name="interroga_la_sibillia">Interroga la Sibilla</string>
    <string name="la_storia">La storia</string>
    <string name="archivio">Archivio</string>
    <string name="pacchetti">Pacchetti</string>
    <string name="il_responso_della_sibillia">Il responso della Sibilla</string>
    <string name="risposta_sibillia">Risposta Sibilla</string>
    <string name="salva">Salva</string>
    <string name="data">Data</string>
    <string name="responso">Responso</string>
    <string name="domanda">Domanda</string>
    <string name="cerca">Cerca</string>
    <string name="titolo">Titolo</string>
    <string name="child"> Scegli una domanda </string>
    <string name="parent">Scegli una categoria </string>
    <string name="vuoi_interrogare_la_sibilla_senza_limiti">Vuoi interrogare la Sibilla senza limiti?</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="clicca_per_registrarti">Non sei registrato? Clicca qui</string>
    <string name="logout">Logout</string>
    <string name="inserisci_di_nuovo_la_password">Inserisci di nuovo la password</string>
    <string name="clicca_per_loggare">Hai già un account? Clicca qui </string>
    <string name="sign_in_with_google">Loggati con Google</string>
    <string name="facebook_app_id">918013009565351</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">86d8ad837745b9852128e75f93324302</string>
    <string name="loggati_con_facebook">Loggati con Facebook</string>

</resources>