<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:background="@color/white"
        android:hint="@string/question"
        android:paddingLeft="40px"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@color/white"
        android:hint="@string/name"
        android:paddingLeft="40px"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/bornPlace"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:layout_marginStart="4dp"
        android:background="@color/white"
        android:hint="@string/bornPlace"
        android:paddingLeft="40px"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@color/white"
        android:hint="@string/surname"
        android:paddingLeft="40px"
        android:textColor="@color/black"
        android:textSize="20sp"
       />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="300px"
        android:layout_height="150px"
        android:text="@string/search"
        android:layout_gravity="center"
       />


</LinearLayout>