<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/questionSibBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interroga_la_sibillia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/storyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la_storia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionSibBtn"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/archiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/archivio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyBtn"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/packageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacchetti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/archiveBtn"
        app:layout_constraintVertical_bias="0.201" />


</androidx.constraintlayout.widget.ConstraintLayout>